--- a/AtCoder/rust/compete.toml
+++ b/AtCoder/rust/compete.toml
@@ -25,7 +25,7 @@ src = '''
 #[allow(unused_imports)]
 use itertools::Itertools;
 #[allow(unused_imports)]
-use proconio::{fastout, input, marker::Chars};
+use proconio::{fastout, input, marker::Chars, marker::Usize1};
 #[allow(unused_imports)]
 use std::cmp::{max, min};
 #[allow(unused_imports)]
